I don't know why the fontawesome icons are not showing up in the new navbar, but I'll fix it. Moving to the gaming laptop

--- a/src/app/main-navbar/main-navbar.component.scss
+++ b/src/app/main-navbar/main-navbar.component.scss
@@ -1,67 +1,56 @@
-$blue-color: rgb(50,150,220);
-$purple-color: #6804A4;
-
-.just-about{
-    left: auto;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: controlFont;
 }
 
-.logo-home-button{
-    height: 60%;
-    width: 60%;
+.navigation {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    width: 450px;
+    height: 70px;
+    background: #fff;
+    border-radius: 35px;
+    box-shadow: 0 15px 25px rgba(0,0,0,0.1);
 }
 
-.profile-image{
-    width: 50px;
-    height: 50px;
+.navigation ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
 }
 
-.navbar.navbar-1 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger6.svg?color=000');
-    }
-    .navbar.navbar-2 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger2.svg?color=fff');
-    }
-    .navbar.navbar-3 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=6a1b9a');
-    }
-    .navbar.navbar-4 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger7.svg?color=BFE100');
-    }
-    .navbar.navbar-5 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger5.svg?color=6a1b9a');
-    }
-    .navbar.navbar-6 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger8.svg?color=E3005C');
-    }
-    .navbar.navbar-7 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger9.svg?color=FF2C00');
-    }
-    .navbar.navbar-8 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger4.svg?color=1729B0');
-    }
-    .navbar.navbar-9 .navbar-toggler-icon {
-    background-image: url('https://mdbootstrap.com/img/svg/hamburger3.svg?color=00FBD8');
-    }
+.navigation ul li {
+    position: relative;
+    list-style: none;
+    width: 90px;
+    height: 70px;
+    z-index: 1;
+}
 
-    .navbar-brand{
-        height: 50px;
-        width: 80px;
-        display: flex;
-        align-items: center;
-        margin: 0 1rem 0 0.5rem;
-    }
+.navigation ul li a {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    color: #333;
+    font-weight: 300;
+}
 
-    .navbar-brand-text{
-        color: lime;
-        width: 100%;
-    }
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    line-height: 75px;
+    text-align: center;
+    transform: 0.5s;
+}
 
-    .navbar-color{
-        background-color: $purple-color;
-    }
-
-    @media(max-width: 768px){
-        .navbar-color{
-            background-color: $blue-color;
-        }
-    }
+.navigation ul li.active a .icon {
+    color: #fff;
+}
